WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114679
REGRESSION (
r148506
): Use of deprecated libsoup API
https://bugs.webkit.org/show_bug.cgi?id=114679
Summary
REGRESSION (r148506): Use of deprecated libsoup API
Manuel Rego Casasnovas
Reported
2013-04-16 05:11:24 PDT
EFL WK1 build is broken: /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit/efl/ewk/ewk_network.cpp:37:55: error: 'GType soup_proxy_resolver_get_type()' is deprecated (declared at /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/WebKitBuild/Dependencies/Root/include/libsoup-2.4/libsoup/soup-proxy-resolver.h:43): Use 'SoupProxyURIResolver' instead [-Werror=deprecated-declarations] /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit/efl/ewk/ewk_network.cpp:37:85: error: 'GType soup_proxy_resolver_get_type()' is deprecated (declared at /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/WebKitBuild/Dependencies/Root/include/libsoup-2.4/libsoup/soup-proxy-resolver.h:43): Use 'SoupProxyURIResolver' instead [-Werror=deprecated-declarations] /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit/efl/ewk/ewk_network.cpp: In function 'const char* ewk_network_proxy_uri_get()': /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit/efl/ewk/ewk_network.cpp:50:147: error: 'GType soup_proxy_resolver_get_type()' is deprecated (declared at /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/WebKitBuild/Dependencies/Root/include/libsoup-2.4/libsoup/soup-proxy-resolver.h:43): Use 'SoupProxyURIResolver' instead [-Werror=deprecated-declarations] /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit/efl/ewk/ewk_network.cpp:50:177: error: 'GType soup_proxy_resolver_get_type()' is deprecated (declared at /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/WebKitBuild/Dependencies/Root/include/libsoup-2.4/libsoup/soup-proxy-resolver.h:43): Use 'SoupProxyURIResolver' instead [-Werror=deprecated-declarations]
Attachments
Patch
(1.84 KB, patch)
2013-04-16 05:14 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2013-04-16 05:14:33 PDT
Created
attachment 198318
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-16 05:57:55 PDT
Comment on
attachment 198318
[details]
Patch Clearing flags on attachment: 198318 Committed
r148511
: <
http://trac.webkit.org/changeset/148511
>
WebKit Commit Bot
Comment 3
2013-04-16 05:57:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug