REGRESSION (r148506): Use of deprecated libsoup API https://bugs.webkit.org/show_bug.cgi?id=114679

Patch by Manuel Rego Casasnovas <rego@igalia.com> on 2013-04-16
Reviewed by Gyuyoung Kim.

Remove deprecated libsoup API usage.

* ewk/ewk_network.cpp:
(ewk_network_proxy_uri_set):
(ewk_network_proxy_uri_get):

Canonical link: https://commits.webkit.org/133052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148511 268f45cc-cd09-0410-ab3c-d52691b4dbfc